--- a/WebApp/Views/Shared/Sections/Account/_Account-saved-items.cshtml
+++ b/WebApp/Views/Shared/Sections/Account/_Account-saved-items.cshtml
@@ -21,7 +21,17 @@
                 <a asp-controller="Home" asp-action="Index" class="btn-gray"><i class="fa-light fa-right-from-bracket"></i>Sign Out</a>
             </div>
         </div>
+
+        
         <div class="saved-courses">
+            <div class="heading">
+                <h1 class="h2">@Model.Title</h1>
+                <div class="delete-button">
+                    <form asp-controller="Account" asp-action="DeleteAllCourses" method="post">               
+                        <button type="submit" class="btn-theme"><i class="fa-regular fa-trash"></i>Delete all</button>
+                    </form>
+                </div>
+            </div>
             <div class="course-grid">
                 <div class="course-item">
                     @foreach (var course in Model.Courses)
