--- a/WebApp/wwwroot/css/scss/sections/_allCourses.scss
+++ b/WebApp/wwwroot/css/scss/sections/_allCourses.scss
@@ -179,6 +179,7 @@
                         }
 
                         .price {
+                            color: $theme;
                         }
                     }
 
@@ -417,6 +418,7 @@
                         }
 
                         .price {
+                            color: $theme;
                         }
                     }
 
