Added MyCourse to be able to join a specific course and SingleCourse pages

--- a/WebApp/Views/Shared/Sections/Course/_WorkWithUs.cshtml
+++ b/WebApp/Views/Shared/Sections/Course/_WorkWithUs.cshtml
@@ -7,7 +7,7 @@
         </div>
 
         <div class="content-right">
-            <a href="/" id="workWithUsId"></a>
+            <img src="~/images/workWithUs.svg" alt="Work with us" />
         </div>
     </div>
 </section>
