--- a/WebApp/wwwroot/css/scss/_sections.scss
+++ b/WebApp/wwwroot/css/scss/_sections.scss
@@ -17,3 +17,8 @@
 @import './sections/_allCourses.scss';
 @import './sections/_unSubscribe.scss';
 @import './sections/_workWithUs.scss';
+@import './sections/_SingleCourseShowCase.scss';
+@import './sections/_SingleCourseDescription.scss';
+@import './sections/_SingleCourseProgram.scss';
+@import './sections/_SingleCourseAuthor.scss';
+@import './sections/_subCourse.scss';
