--- a/WebApp/Views/Shared/Sections/Account/_Account-subCourse.cshtml
+++ b/WebApp/Views/Shared/Sections/Account/_Account-subCourse.cshtml
@@ -1,10 +1,10 @@
-﻿@model AccountSavedItemsViewModel;
+﻿@model AccountMyCoursesViewModel;
 @{
     ViewData["Title"] = Model.Title;
 
 }
 
-<section id="saved-items">
+<section id="my-items">
     <div class="container">
         <div class="account-nav">
             <div class="nav-image">
@@ -17,18 +17,18 @@
             <div class="nav-buttons">
                 <a asp-controller="Account" asp-action="Index" class="btn-gray"><i class="fa-regular fa-gear"></i>Account Details</a>
                 <a asp-controller="Account" asp-action="Security" class="btn-gray"><i class="fa-regular fa-lock"></i>Security</a>
-                <a asp-controller="Account" asp-action="SavedItems" class="btn-theme"><i class="fa-light fa-bookmark"></i>Saved Courses</a>
-                <a asp-controller="Account" asp-action="SubCourse" class="btn-gray"><i class="fa-light fa-cart-arrow-down"></i>My Courses</a>
+                <a asp-controller="Account" asp-action="SavedItems" class="btn-gray"><i class="fa-light fa-bookmark"></i>Saved Courses</a>
+                <a asp-controller="Account" asp-action="SubCourse" class="btn-theme"><i class="fa-light fa-cart-arrow-down"></i>My Courses</a>
                 <a asp-controller="Home" asp-action="Index" class="btn-gray"><i class="fa-light fa-right-from-bracket"></i>Sign Out</a>
             </div>
         </div>
 
-        
+
         <div class="saved-courses">
             <div class="heading">
                 <h1 class="h2">@Model.Title</h1>
                 <div class="delete-button">
-                    <form asp-controller="Account" asp-action="DeleteAllCourses" method="post">               
+                    <form asp-controller="Account" asp-action="DeleteAllMyCourses" method="post">
                         <button type="submit" class="btn-theme"><i class="fa-regular fa-trash"></i>Delete all</button>
                     </form>
                 </div>
@@ -42,7 +42,7 @@
                                 <img class="main-image" src=@course.CoursePictureUrl />
 
 
-                                <form asp-controller="Account" asp-action="DeleteOneCourse" method="post">
+                                <form asp-controller="Account" asp-action="DeleteOneMyCourse" method="post">
                                     <input type="hidden" name="CourseId" value="@course.Id" />
                                     <button class="bookmark" type="Submit" title="Remove Course"><i class="fa-regular fa-trash"></i></button>
                                 </form>
