--- a/WebApp/Views/Shared/_headerPartial.cshtml
+++ b/WebApp/Views/Shared/_headerPartial.cshtml
@@ -46,6 +46,7 @@
 							<a asp-controller="Account" asp-action="Index" class="dropdown-item btn-theme"><i class="fa-regular fa-gear"></i>Details</a>
 							<a asp-controller="Account" asp-action="Security" class="dropdown-item btn-theme"><i class="fa-regular fa-lock"></i>Security</a>
 							<a asp-controller="Account" asp-action="SavedItems" class="dropdown-item btn-theme"><i class="fa-light fa-bookmark"></i>Saved Courses</a>
+							<a asp-controller="Account" asp-action="SubCourse" class="dropdown-item btn-theme"><i class="fa-light fa-cart-arrow-down"></i>My Courses</a>
 							<div class="dropdown-divider"></div>
 							<a class="dropdown-item btn-theme" asp-controller="Account" asp-action="LogOut"><i class="fa-light fa-right-from-bracket"></i>Sign Out</a>
 						</div>
@@ -71,6 +72,7 @@
 							<a asp-controller="Account" asp-action="Index" class="dropdown-item-mobile btn-theme"><i class="fa-regular fa-gear"></i>Details</a>
 							<a asp-controller="Account" asp-action="Security" class="dropdown-item-mobile btn-theme"><i class="fa-regular fa-lock"></i>Security</a>
 							<a asp-controller="Account" asp-action="SavedItems" class="dropdown-item-mobile btn-theme"><i class="fa-light fa-bookmark"></i>Saved Courses</a>
+							<a asp-controller="Account" asp-action="SubCourse" class="dropdown-item-mobile btn-theme"><i class="fa-light fa-cart-arrow-down"></i>My Courses</a>
 							<div class="dropdown-divider-mobile"></div>
 							<a class="dropdown-item-mobile btn-theme" asp-controller="Account" asp-action="LogOut"><i class="fa-light fa-right-from-bracket"></i>Sign Out</a>
 
