--- a/WebApp/wwwroot/css/scss/sections/_allCourses.scss
+++ b/WebApp/wwwroot/css/scss/sections/_allCourses.scss
@@ -82,6 +82,7 @@
                     border-bottom-left-radius: 0.9rem !important;
                     border-bottom-right-radius: 0.9rem !important;
                     overflow: hidden;
+                    text-decoration: none;
 
                     &:hover {
                         transition: all 0.15s ease-in-out;
@@ -232,6 +233,45 @@
                 }
             }
         }
+
+        .pagination {
+            margin-top: 2rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+
+            .pagination-list {
+                display: flex;
+                list-style: none;
+
+
+                .pagination-item {
+
+
+                    a {
+                        color: $theme;
+                        text-decoration: none;
+                        padding: .5rem;
+                        margin: .5rem;
+                        border-radius: 5px;
+                        transition: all 0.3s ease-in-out;
+                    }
+
+                    a:hover {
+                        background-color: $theme;
+                        color: white;
+                    }
+
+                    &.active {
+                        a {
+                            background-color: $theme;
+                            color: white;
+                        }
+                    }
+                }
+            }
+        }
     }
 }
 
@@ -286,11 +326,9 @@
                     }
 
                     button {
-                        
                         display: none;
-                        
+
                         i {
-                            
                         }
                     }
                 }
@@ -322,6 +360,7 @@
                         overflow: hidden;
                         border-bottom-left-radius: 15px !important;
                         border-bottom-right-radius: 15px !important;
+                        text-decoration: none;
 
                         &:hover {
                             cursor: pointer;
@@ -466,6 +505,44 @@
                         p {
                             margin: 0;
                             padding: 0;
+                        }
+                    }
+                }
+            }
+
+            .pagination {
+                margin-top: 2rem;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+
+                .pagination-list {
+                    display: flex;
+                    list-style: none;
+
+
+                    .pagination-item {
+
+                        a {
+                            color: $theme;
+                            text-decoration: none;
+                            padding: .5rem;
+                            margin: .5rem;
+                            border-radius: 5px;
+                            transition: all 0.3s ease-in-out;
+                        }
+
+                        a:hover {
+                            background-color: $theme;
+                            color: white;
+                        }
+
+                        &.active {
+                            a {
+                                background-color: $theme;
+                                color: white;
+                            }
                         }
                     }
                 }
