--- a/WebApp/Views/Shared/Sections/Home/_Black-and-white.cshtml
+++ b/WebApp/Views/Shared/Sections/Home/_Black-and-white.cshtml
@@ -6,8 +6,9 @@
                 <h1 class="second gray-900">Light & Dark Mode</h1>
             </div>
             <div class="bg-image">
-                <img src="images/MacBook-pro-all.svg" alt="computer dark mode">                
-            </div>    
+                <img src="images/MacBook-pro-all.svg" alt="computer dark mode" id="image">                
+            </div>
+    
         </div>
         <div class="boxes">
             <div class="box-black"></div>
